2019-10-11 Wiley E. Hill <wileyhill@gmail.com

    * scheme/gschem/gschem-tools-menu.scm: Mark noop tools:menu-items
      to be evaluated.

    * src/iface/i_command.c: Fix backwards cut and copy enumerations
      in i_command_get_action_icon, and revise i_command_map_icon to
      return true for actions involving buffers.

    * src/x/x_misc.c: Fix passing address of pointer to g_spawn_async in
      function x_show_uri.

2019-10-09 Wiley E. Hill <wileyhill@gmail.com

    * scheme/gschem/gschem-tools-menu.scm: Translate tools:menu-items.

    * po/ru.po: Update Russian translations.

2019-10-07 Wiley E. Hill <wileyhill@gmail.com

    * scheme/gschem/gschem-tools-menu.scm: Add hot keys, "T V" to launch git,
      and explicitly map to icon "geda-text-editor" to "tools:open-editor".

    * src/guile/g_util.c: Revise show_uri to free uri.

2019-10-05 Wiley E. Hill <wileyhill@gmail.com

    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/ml.po: Updated Malayalam translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.

2019-10-04 Wiley E. Hill <wileyhill@gmail.com

    * etc/system-gschemrc.scm: Mark "Draw Order" menu as translatable. Replace
      apostrophe quote, 0x27, with grave accent, 0x60, so that the translation
      no-op macros are evaluated.

    * scheme/gschem/gschem-export-menu.scm: Flag Export menu item and menu-items
      as translatable. Replace apostrophe quote, 0x27, with grave accent, 0x60,
      so that the translation no-op macros are evaluated.

    * scheme/gschem/gschem-tools-menu.scm: Add hot keys, "T E" to launch the
      text editor. Replace apostrophe quote, 0x27, with grave accent, 0x60, so
      that the translation no-op macros are evaluated.
